# secure-ai-ssistant

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  components.py  launcher.py  main.py  state.py  styles.py
core/: config.py  errors.py  models.py  storage.py  text.py
docs/: DEMO_RUNBOOK.md  FAQ.md  IT_DEPLOYMENT.md  PILOT_CHECKLIST.md  PRD.md  PRIVACY.md  SCHOOL_LEADER_BRIEF.md  SCREEN_RECORDING_SCRIPT.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md
fixtures/: README.md  manifest.json
fixtures/expected/: absence_full.json  absence_range.json  contradictory_dates.json  image_absence_clear.json  image_low_quality.json  image_reply_clear.json  image_triage_clear.json  info_only_update.json  note_contradictory.json  note_missing_dates.json  note_reply_request.json  note_schedule.json  pdf_absence_direct.json  pdf_schedule_direct.json  pdf_triage_direct.json  reply_general.json  schedule_meeting.json  triage_document.json  unsupported_multi_child.json
fixtures/text/: absence_full.txt  (+7 more)
prompts/: assistant_system.txt  assistant_user.txt  default_library.json  output_system.txt  output_user.txt  vision_system.txt  vision_user.txt
services/: __init__.py  analysis.py  backend.py  case_service.py  exports.py  files.py  outputs.py  prompt_library.py  prompt_loader.py
tests/: conftest.py  test_analysis.py  test_app_state.py  test_backend.py  test_case_service.py  test_config.py  test_exports.py  test_files.py  test_outputs.py  test_prompt_library.py  test_storage.py
(+4 files in other folders)
