[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-secr-ai-tery"
version = "0.1.0"
description = "Private, offline-friendly prompt workspace for European schools and school support teams."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Eliaen" }
]
dependencies = [
  "openai>=1.68,<2",
  "pillow>=11,<12",
  "pymupdf>=1.24,<2",
  "streamlit>=1.43,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<0.12",
]

[project.scripts]
secure-secr-ai-tery = "app.launcher:main"
sekretariat-copilot = "app.launcher:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*", "core*", "services*"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov=core --cov=services --cov-report=term-missing"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]
ignore = ["E501", "S101", "S310"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
exclude = [
  "^tests/",
]

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true
